fix: Add missing contactbook translations to main locale files

--- a/locales/de.json
+++ b/locales/de.json
@@ -793,6 +793,38 @@
     "points": "Punkte",
     "repeat": "Wiederholen"
   },
+  "contactbook": {
+    "title": "Kontaktbuch",
+    "subtitle": "Wichtige Kontakte",
+    "addContact": "Kontakt hinzufügen",
+    "newContact": "Neuer Kontakt",
+    "editContact": "Kontakt bearbeiten",
+    "noContacts": "Noch keine Kontakte",
+    "addFirstContact": "Fügen Sie den ersten Kontakt hinzu!",
+    "nameLabel": "Name *",
+    "namePlaceholder": "Name",
+    "categoryLabel": "Kategorie",
+    "phoneLabel": "Telefon",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "E-Mail",
+    "emailPlaceholder": "email@beispiel.de",
+    "noteLabel": "Notiz",
+    "notePlaceholder": "Zusätzliche Informationen...",
+    "fillName": "Geben Sie einen Namen ein",
+    "contactAdded": "Kontakt hinzugefügt",
+    "contactUpdated": "Kontakt aktualisiert",
+    "contactDeleted": "Kontakt gelöscht",
+    "deleteConfirm": "Löschen?",
+    "deleteMessage": "Sind Sie sicher, dass Sie \"{{name}}\" löschen möchten?",
+    "couldNotLoad": "Kontakte konnten nicht geladen werden",
+    "errorLoading": "Beim Laden der Kontakte ist ein Fehler aufgetreten",
+    "couldNotAdd": "Kontakt konnte nicht hinzugefügt werden",
+    "couldNotUpdate": "Kontakt konnte nicht aktualisiert werden",
+    "couldNotDelete": "Kontakt konnte nicht gelöscht werden",
+    "errorSaving": "Beim Speichern des Kontakts ist ein Fehler aufgetreten",
+    "errorDeleting": "Beim Löschen des Kontakts ist ein Fehler aufgetreten",
+    "noFamilyOrUser": "Keine Familie oder Benutzer gefunden"
+  },
   "language": {
     "title": "Sprache",
     "subtitle": "Wählen Sie Ihre Sprache",
