--- a/locales/en.json
+++ b/locales/en.json
@@ -370,6 +370,38 @@
       "sunday": "Sunday"
     }
   },
+  "contactbook": {
+    "title": "Contact Book",
+    "subtitle": "Important contacts",
+    "addContact": "Add contact",
+    "newContact": "New contact",
+    "editContact": "Edit contact",
+    "noContacts": "No contacts yet",
+    "addFirstContact": "Add the first contact!",
+    "nameLabel": "Name *",
+    "namePlaceholder": "Name",
+    "categoryLabel": "Category",
+    "phoneLabel": "Phone",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "Email",
+    "emailPlaceholder": "email@example.com",
+    "noteLabel": "Note",
+    "notePlaceholder": "Extra information...",
+    "fillName": "Enter a name",
+    "contactAdded": "Contact added",
+    "contactUpdated": "Contact updated",
+    "contactDeleted": "Contact deleted",
+    "deleteConfirm": "Delete?",
+    "deleteMessage": "Are you sure you want to delete \"{{name}}\"?",
+    "couldNotLoad": "Could not load contacts",
+    "errorLoading": "Something went wrong while loading contacts",
+    "couldNotAdd": "Could not add contact",
+    "couldNotUpdate": "Could not update contact",
+    "couldNotDelete": "Could not delete contact",
+    "errorSaving": "Something went wrong while saving the contact",
+    "errorDeleting": "Something went wrong while deleting the contact",
+    "noFamilyOrUser": "No family or user found"
+  },
   "documents": {
     "title": "Documents",
     "onlyForParents": "This feature is only available for parents",
