--- a/locales/es.json
+++ b/locales/es.json
@@ -775,6 +775,38 @@
     "points": "Puntos",
     "repeat": "Repetir"
   },
+  "contactbook": {
+    "title": "Libro de contactos",
+    "subtitle": "Contactos importantes",
+    "addContact": "Añadir contacto",
+    "newContact": "Nuevo contacto",
+    "editContact": "Editar contacto",
+    "noContacts": "Aún no hay contactos",
+    "addFirstContact": "¡Añade el primer contacto!",
+    "nameLabel": "Nombre *",
+    "namePlaceholder": "Nombre",
+    "categoryLabel": "Categoría",
+    "phoneLabel": "Teléfono",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "Correo electrónico",
+    "emailPlaceholder": "email@ejemplo.com",
+    "noteLabel": "Nota",
+    "notePlaceholder": "Información adicional...",
+    "fillName": "Ingresa un nombre",
+    "contactAdded": "Contacto añadido",
+    "contactUpdated": "Contacto actualizado",
+    "contactDeleted": "Contacto eliminado",
+    "deleteConfirm": "¿Eliminar?",
+    "deleteMessage": "¿Estás seguro de que quieres eliminar \"{{name}}\"?",
+    "couldNotLoad": "No se pudieron cargar los contactos",
+    "errorLoading": "Algo salió mal al cargar los contactos",
+    "couldNotAdd": "No se pudo añadir el contacto",
+    "couldNotUpdate": "No se pudo actualizar el contacto",
+    "couldNotDelete": "No se pudo eliminar el contacto",
+    "errorSaving": "Algo salió mal al guardar el contacto",
+    "errorDeleting": "Algo salió mal al eliminar el contacto",
+    "noFamilyOrUser": "No se encontró familia o usuario"
+  },
   "language": {
     "title": "Idioma",
     "subtitle": "Elige tu idioma",
