--- a/locales/fr.json
+++ b/locales/fr.json
@@ -793,6 +793,38 @@
     "points": "Points",
     "repeat": "Répéter"
   },
+  "contactbook": {
+    "title": "Carnet de contacts",
+    "subtitle": "Contacts importants",
+    "addContact": "Ajouter un contact",
+    "newContact": "Nouveau contact",
+    "editContact": "Modifier le contact",
+    "noContacts": "Pas encore de contacts",
+    "addFirstContact": "Ajoutez le premier contact!",
+    "nameLabel": "Nom *",
+    "namePlaceholder": "Nom",
+    "categoryLabel": "Catégorie",
+    "phoneLabel": "Téléphone",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "E-mail",
+    "emailPlaceholder": "email@exemple.fr",
+    "noteLabel": "Note",
+    "notePlaceholder": "Informations supplémentaires...",
+    "fillName": "Entrez un nom",
+    "contactAdded": "Contact ajouté",
+    "contactUpdated": "Contact mis à jour",
+    "contactDeleted": "Contact supprimé",
+    "deleteConfirm": "Supprimer?",
+    "deleteMessage": "Êtes-vous sûr de vouloir supprimer \"{{name}}\"?",
+    "couldNotLoad": "Impossible de charger les contacts",
+    "errorLoading": "Une erreur s'est produite lors du chargement des contacts",
+    "couldNotAdd": "Impossible d'ajouter le contact",
+    "couldNotUpdate": "Impossible de mettre à jour le contact",
+    "couldNotDelete": "Impossible de supprimer le contact",
+    "errorSaving": "Une erreur s'est produite lors de l'enregistrement du contact",
+    "errorDeleting": "Une erreur s'est produite lors de la suppression du contact",
+    "noFamilyOrUser": "Aucune famille ou utilisateur trouvé"
+  },
   "language": {
     "title": "Langue",
     "subtitle": "Choisissez votre langue",
