--- a/locales/nl.json
+++ b/locales/nl.json
@@ -182,6 +182,38 @@
     "repeatWeekly": "Wekelijks",
     "repeatMonthly": "Maandelijks"
   },
+  "contactbook": {
+    "title": "Contactboek",
+    "subtitle": "Belangrijke contacten",
+    "addContact": "Contact toevoegen",
+    "newContact": "Nieuw contact",
+    "editContact": "Contact bewerken",
+    "noContacts": "Nog geen contacten",
+    "addFirstContact": "Voeg het eerste contact toe!",
+    "nameLabel": "Naam *",
+    "namePlaceholder": "Naam",
+    "categoryLabel": "Categorie",
+    "phoneLabel": "Telefoon",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "E-mail",
+    "emailPlaceholder": "email@voorbeeld.nl",
+    "noteLabel": "Notitie",
+    "notePlaceholder": "Extra informatie...",
+    "fillName": "Vul een naam in",
+    "contactAdded": "Contact toegevoegd",
+    "contactUpdated": "Contact bijgewerkt",
+    "contactDeleted": "Contact verwijderd",
+    "deleteConfirm": "Verwijderen?",
+    "deleteMessage": "Weet je zeker dat je \"{{name}}\" wilt verwijderen?",
+    "couldNotLoad": "Kon contacten niet laden",
+    "errorLoading": "Er ging iets mis bij het laden van de contacten",
+    "couldNotAdd": "Kon contact niet toevoegen",
+    "couldNotUpdate": "Kon contact niet bijwerken",
+    "couldNotDelete": "Kon contact niet verwijderen",
+    "errorSaving": "Er ging iets mis bij het opslaan van het contact",
+    "errorDeleting": "Er ging iets mis bij het verwijderen van het contact",
+    "noFamilyOrUser": "Geen familie of gebruiker gevonden"
+  },
   "roosters": {
     "title": "Roosters",
     "subtitle": "Beheer gezinsroosters",
