fix: Resolve Expo config warning and JSON syntax error in locales

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -178,11 +178,9 @@
   },
 
   "profile": {
-    "repeat": "Herhaling",
-    "repeatNone": "Geen",
-    "repeatDaily": "Dagelijks",
-    "repeatWeekly": "Wekelijks",
-    "repeatMonthly": "Maandelijks"
+    "title": "Profiel",
+    "editProfile": "Profiel bewerken",
+    "settings": "Instellingen"
   },
 
   "contactbook": {
