docs: Add Adult Tasks feature guide and summary

--- a/locales/en.json
+++ b/locales/en.json
@@ -290,6 +290,42 @@
     "addToToday": "Today",
     "addedToToday": "Task has been added to today"
   },
+  "adultTasks": {
+    "title": "Adult Tasks",
+    "subtitle": "Timeline-based planning",
+    "addTask": "Add task",
+    "today": "Today",
+    "all": "All",
+    "taskName": "Task name",
+    "startTime": "Start time",
+    "endTime": "End time",
+    "assignTo": "Assign to",
+    "repeat": "Repeat",
+    "repeatNone": "None",
+    "repeatDaily": "Daily",
+    "repeatWeekdays": "Weekdays",
+    "repeatWeekly": "Weekly",
+    "repeatMonthly": "Monthly",
+    "repeatCustom": "Custom",
+    "selectDays": "Select days",
+    "notes": "Notes",
+    "addNotes": "Add any additional notes...",
+    "chooseIcon": "Choose icon",
+    "taskAdded": "Task added successfully",
+    "taskCompleted": "Task completed",
+    "taskDeleted": "Task deleted",
+    "deleteConfirm": "Are you sure you want to delete this task?",
+    "overlap": "Overlap",
+    "overlapWarning": "This task overlaps with another task",
+    "freeTime": "Free time",
+    "addTaskHere": "Add task",
+    "noTasks": "No tasks for today",
+    "noTasksMessage": "Add your first task to get started",
+    "fillTaskName": "Please enter a task name",
+    "selectAdult": "Please assign at least one adult",
+    "duration": "{{minutes}} min",
+    "unassigned": "Unassigned"
+  },
   "rewards": {
     "title": "Reward shop",
     "subtitle": "Exchange coins for fun rewards",
