--- a/locales/nl.json
+++ b/locales/nl.json
@@ -274,6 +274,42 @@
     "add": "Toevoegen",
     "cancel": "Annuleren"
   },
+  "adultTasks": {
+    "title": "Volwassen Taken",
+    "subtitle": "Tijdlijn-gebaseerde planning",
+    "addTask": "Taak toevoegen",
+    "today": "Vandaag",
+    "all": "Alle",
+    "taskName": "Taaknaam",
+    "startTime": "Starttijd",
+    "endTime": "Eindtijd",
+    "assignTo": "Toewijzen aan",
+    "repeat": "Herhaling",
+    "repeatNone": "Geen",
+    "repeatDaily": "Dagelijks",
+    "repeatWeekdays": "Doordeweeks",
+    "repeatWeekly": "Wekelijks",
+    "repeatMonthly": "Maandelijks",
+    "repeatCustom": "Aangepast",
+    "selectDays": "Selecteer dagen",
+    "notes": "Notities",
+    "addNotes": "Voeg extra notities toe...",
+    "chooseIcon": "Kies icoon",
+    "taskAdded": "Taak succesvol toegevoegd",
+    "taskCompleted": "Taak voltooid",
+    "taskDeleted": "Taak verwijderd",
+    "deleteConfirm": "Weet je zeker dat je deze taak wilt verwijderen?",
+    "overlap": "Overlap",
+    "overlapWarning": "Deze taak overlapt met een andere taak",
+    "freeTime": "Vrije tijd",
+    "addTaskHere": "Taak toevoegen",
+    "noTasks": "Geen taken voor vandaag",
+    "noTasksMessage": "Voeg je eerste taak toe om te beginnen",
+    "fillTaskName": "Vul een taaknaam in",
+    "selectAdult": "Wijs minimaal één volwassene toe",
+    "duration": "{{minutes}} min",
+    "unassigned": "Niet toegewezen"
+  },
 
   "shopping": {
     "title": "Boodschappen",
