feat: Implement adult tasks screen with Dutch translation

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,3 +1,4 @@
+
 {
   "common": {
     "loading": "Laden...",
@@ -260,55 +261,43 @@
 
   "tasks": {
     "title": "Taken",
-    "subtitle": "Taken voor het gezin",
-    "assignedTo": "Toegewezen aan",
-    "addTask": "Taak toevoegen",
+    "subtitle": "Dagelijkse planning",
+    "addTitle": "Taak toevoegen",
     "taskName": "Taaknaam",
-    "chooseIcon": "Kies een icoon",
-    "assignTo": "Toewijzen aan",
-    "repeat": "Herhaling",
-    "repeatNone": "Geen",
-    "repeatDaily": "Dagelijks",
-    "repeatWeekly": "Wekelijks",
-    "repeatMonthly": "Maandelijks",
-    "add": "Toevoegen",
-    "cancel": "Annuleren"
-  },
-  "adultTasks": {
-    "title": "Volwassen Taken",
-    "subtitle": "Tijdlijn-gebaseerde planning",
-    "addTask": "Taak toevoegen",
-    "today": "Vandaag",
-    "all": "Alle",
-    "taskName": "Taaknaam",
+    "taskNamePlaceholder": "bijv. Ochtendroutine, Overleg",
+    "chooseIcon": "Kies icoon",
     "startTime": "Starttijd",
     "endTime": "Eindtijd",
     "assignTo": "Toewijzen aan",
-    "repeat": "Herhaling",
+    "repeat": "Herhalen",
     "repeatNone": "Geen",
     "repeatDaily": "Dagelijks",
-    "repeatWeekdays": "Doordeweeks",
+    "repeatWeekdays": "Werkdagen",
     "repeatWeekly": "Wekelijks",
-    "repeatMonthly": "Maandelijks",
     "repeatCustom": "Aangepast",
-    "selectDays": "Selecteer dagen",
-    "notes": "Notities",
-    "addNotes": "Voeg extra notities toe...",
-    "chooseIcon": "Kies icoon",
-    "taskAdded": "Taak succesvol toegevoegd",
-    "taskCompleted": "Taak voltooid",
+    "notesOptional": "Notities (optioneel)",
+    "notesPlaceholder": "Voeg eventueel notities toe...",
+    "today": "Vandaag",
+    "all": "Alle",
+    "taskAdded": "Taak toegevoegd",
     "taskDeleted": "Taak verwijderd",
-    "deleteConfirm": "Weet je zeker dat je deze taak wilt verwijderen?",
-    "overlap": "Overlap",
-    "overlapWarning": "Deze taak overlapt met een andere taak",
-    "freeTime": "Vrije tijd",
-    "addTaskHere": "Taak toevoegen",
-    "noTasks": "Geen taken voor vandaag",
-    "noTasksMessage": "Voeg je eerste taak toe om te beginnen",
+    "deleteConfirm": "Taak verwijderen?",
+    "deleteMessage": "Weet je zeker dat je deze taak wilt verwijderen?",
     "fillTaskName": "Vul een taaknaam in",
+    "selectStartTime": "Selecteer een starttijd",
     "selectAdult": "Wijs minimaal één volwassene toe",
-    "duration": "{{minutes}} min",
-    "unassigned": "Niet toegewezen"
+    "couldNotLoad": "Kon taken niet laden",
+    "couldNotAdd": "Kon taak niet toevoegen",
+    "couldNotDelete": "Kon taak niet verwijderen",
+    "overlap": "Overlap",
+    "selectDays": "Selecteer dagen",
+    "monday": "Ma",
+    "tuesday": "Di",
+    "wednesday": "Wo",
+    "thursday": "Do",
+    "friday": "Vr",
+    "saturday": "Za",
+    "sunday": "Zo"
   },
 
   "shopping": {
